kubernetes/log-output/manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: log-output
  labels:
    name: log-output
