kubernetes/log-output/manifests/deployment-volume.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: log-output
  name: log-output-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: eranikus424/log-output
          volumeMounts:
            - name: log-output-volume
              mountPath: /usr/src/app/logs
        - name: timestamp-generator
          image: eranikus424/timestamp-generator
          volumeMounts:
            - name: log-output-volume
              mountPath: /usr/src/app/logs
      volumes:
        - name: log-output-volume
          emptyDir: {}
