kubernetes/log-output/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 3000
